--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </div>
       <div class="date">This is div</div>
     </div>
+    <video controls="controls">
+      <source src="media/analogclock.mp4" />
+    </video>
 
     <script src="script.js"></script>
   </body>
